[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogzaf"
version = "0.2.0"
authors = [
    {name = "Marcelo LaFleur, Richard W. Evans, and Jason DeBacker"},
]
description = "South Africa Calibration for OG-Core"
readme = "README.md"
license = {text = "CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"}
requires-python = ">=3.12, <3.14"
keywords = [
    "ZAF",
    "South Africa",
    "calibration",
    "overlapping generations",
    "fiscal policy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "psutil",
    "scipy>=1.7.1",
    "pandas>=1.2.5",
    "matplotlib",
    "dask>=2.30.0",
    "distributed>=2.30.1",
    "paramtools>=0.20.0",
    "requests",
    "xlwt",
    "openpyxl>=3.1.2",
    "statsmodels",
    "linearmodels",
    "linecheck",
    "ogcore>=0.14.5",
]

[project.urls]
Homepage = "https://github.com/EAPD-DRB/OG-ZAF/"
"Issue Tracker" = "https://github.com/EAPD-DRB/OG-ZAF/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-xdist",
    "coverage",
    "ruff",
    "ipython",
    "ipykernel",
    "jupyter",
]
docs = [
    "jupyter-book<3.0.0",
    "sphinx>=3.5.4",
    "sphinx-book-theme>=0.1.3",
    "sphinx-argparse",
    "sphinx-exercise",
    "sphinx-proof",
    "sphinxcontrib-bibtex>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["ogzaf*"]

[tool.setuptools.package-data]
ogzaf = [
    "ogzaf_default_parameters.json",
    "ogzaf_default_parameters_multisector.json",
]

[tool.ruff]
line-length = 79
target-version = "py312"
# Notebooks and tutorial run scripts are teaching artifacts, not
# package code (matches OG-Core's exclude pattern for examples).
exclude = [
    "**/*.ipynb",
    "examples/UN_examples/**",
    "docs/book/content/UNtutorial/materials/PrevReformsNotebooks/**",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["F841"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
markers = [
    "local: marks tests that are run locally only and not on GH Actions",
]
